syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

message Task {
        string id = 1;
        string text = 2;
        google.protobuf.Timestamp time = 3;
}

message PostTaskRequest {
        string text = 1;
        google.protobuf.Timestamp time = 2;
        int64 timestamp = 3;
}

message PostTaskResponse {
        string task = 1;
        int64 confirmation = 2;
}

message GetTaskRequest {
        string id = 1;
        uint64 userID = 2;
}

message GetTaskResponse {
        Task task = 1;
        int64 confirmation = 2;
}

message GetMultipleTaskRequest {
        uint64 skip = 1;
        uint64 take = 2;
}

message GetMultipleTaskResponse {
        repeated Task tasks = 1;
        int64 confirmation = 2;
}

message PutTaskRequest {
        string id = 1;
        string text = 2;
        google.protobuf.Timestamp time = 3;
}

message PutTaskResponse {
        string task = 1;
        int64 confirmation = 2;
}

message DeleteTaskRequest {
        string id = 1;
}

message DeleteTaskResponse {
        string id = 1;
        int64 confirmation = 2;
}

service TaskService {
        rpc PostTask (PostTaskRequest) returns (PostTaskResponse) {}
        rpc GetTask (GetTaskRequest) returns (GetTaskResponse) {}
        rpc GetMultipleTask (GetMultipleTaskRequest) returns (GetMultipleTaskResponse) {}
        rpc PutTask (PutTaskRequest) returns (PutTaskResponse) {}
        rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse) {}
}